2006-06-19  Peter Johanson  <peter@peterjohanson.com>

	* NEWS: Update with a few more changes for the 0.8.5 release.
	* configure.in: Bump to 0.8.5 for release.

2006-06-19  Peter Johanson  <peter@peterjohanson.com>

	* plugins/TrayIcon.cs: Small fix to stop using deprecated Menu.Popup
	overload.

2006-06-02  Ryan Lortie  <desrt@desrt.ca>

	* src/AddWindow.cs:
	* src/PlaylistWindow.cs: Properly raise window when unhiding via
	muine-shell.  Fixes bug #303333.

2006-05-29  Peter Johanson  <peter@peterjohanson.com>

	* NEWS: Update with bugs fixed since last pre-release.
	* configure.in: Bump to 0.8.5pre2 for another pre-release.

2006-05-29  Peter Johanson  <peter@peterjohanson.com>

	* plugins/egg-sharp.cs: Update to include implementation of some
	previously missing pieces. Fixes the tray icon not reappearing after a
	gnome-panel crash. Fixes bug #314097.

2006-05-09  Peter Johanson  <peter@peterjohanson.com>

	* libmuine/id3-vfs/id3-vfs.c: Handler large id3 tags properly. Fixes 
	#162243. Patch by Jorn Baayen.

2006-05-04  Peter Johanson  <peter@peterjohanson.com>

	* NEWS:
	* configure.in: Updated news info, and bump version for a 0.8.5pre1
	release.

2006-05-04  Peter Johanson  <peter@peterjohanson.com>

	* data/Makefile.am: Install the dbus .service file to the right
	location.
	* configure.in:
	* doc/Makefile.am: Small tweaks/hacks to make distcheck work finally.

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2006-04-14  Amanpreet Singh Alam <apbrar@gmail.com>

	*configure.in: "pa" Punjabi Language is added to ALL_LINGUAS

2006-03-21  Peter Johanson  <peter@peterjohanson.com>

	* src/PlaylistWindow.cs: Fix small bug in the visibility action
	changes.

2006-03-20  Peter Johanson  <peter@peterjohanson.com>

	* configure.in:
	* plugins/Makefile.am: Build inotify plugin conditional based on
	detected platform, and configure argument. See bug #329716.
